--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,22 @@ python:
   - 2.7
   - 3.5
   - 3.6
+  - 3.7
 os:
   - linux
 addons:
   apt:
     packages:
-      - libhmsbeagle1v5
-      - libhmsbeagle-dev
+      - autoconf
+      - automake
+      - git
+      - libtool
 before_install:
-  - export CPLUS_INCLUDE_PATH=/usr/include/libhmsbeagle
+  - git clone https://github.com/beagle-dev/beagle-lib.git
+  - cd beagle-lib
+  - ./autogen.sh && ./configure --without-opencl --with-jdk=no && sudo make install
+  - export CPLUS_INCLUDE_PATH=/usr/local/include/libhmsbeagle-1
+  - cd ..
 install:
   - pip install ".[test]" .
 script: pytest
